# puzzle

./: LICENSE  README.md  de.matthiasmann.Puzzle.json  meson.build
data/: de.matthiasmann.Puzzle.appdata.xml.in  de.matthiasmann.Puzzle.desktop.in  de.matthiasmann.Puzzle.gschema.xml  meson.build  org.gnome.Puzzle.appdata.xml.in  org.gnome.Puzzle.desktop.in  org.gnome.Puzzle.gschema.xml
po/: POTFILES  meson.build
src/: Part.vala  Puzzle.vala  Vec2.vala  auto_crop.c  main.vala  meson.build  puzzle.gresource.xml  scale_half.c  tags.Qr2bJU  window.ui  window.vala
